--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
+/* base */
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.7;
+}
+
+/* utils */
+
+.align-left {
+  text-align: left;
 }
 
 .warn {
