--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,34 @@
-/* base */
+// base
+// ==============================================================
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.7;
+  color: rgb(30, 30, 30);
 }
 
-/* utils */
+// components
+// ==============================================================
+
+.container {
+  max-width: 950px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.table-row {
+  border-bottom: 1px solid lightgray;
+}
+
+.table-cell {
+  line-height: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+// utils
+// ==============================================================
 
 .align-left {
   text-align: left;
