--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,26 @@ body {
   color: rgb(30, 30, 30);
 }
 
+// utils
+// ==============================================================
+
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+
+.warn {
+  color: red;
+}
+
 // components
 // ==============================================================
 
