--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.7;
   color: rgb(30, 30, 30);
+  overflow-y: scroll;
 }
 
 // utils
