--- a/src/components/FilterableProductTable.scss
+++ b/src/components/FilterableProductTable.scss
@@ -1,7 +1,15 @@
+.top-bar {
+  background-color: darkblue;
+  color: white;
+  // width: 500px;
+}
+
 .product-table {
+  background-color: rgb(250, 250, 255);
   width: 100%;
+  // width: 500px;
 }
 
 .warn {
-  color: red;
+  color: darkgray;
 }
