--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.7;
-  color: rgb(30, 30, 30);
+  background-color: #fafbfb;
+  color: #263959;
   overflow-y: scroll;
 }
 
