--- a/src/components/FilterableProductTable.scss
+++ b/src/components/FilterableProductTable.scss
@@ -1,11 +1,9 @@
 .top-bar {
-  background-color: darkblue;
+  background-color: #0049b0;
   color: white;
-  // width: 500px;
 }
 
 .product-table {
-  background-color: rgb(250, 250, 255);
   width: 100%;
   // width: 500px;
 }
