--- a/src/App.scss
+++ b/src/App.scss
@@ -5,9 +5,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.7;
-  background-color: #fafbfb;
-  color: #263959;
   overflow-y: scroll;
+}
+
+button,
+input[type='button'] {
+  cursor: pointer;
 }
 
 // utils
@@ -35,7 +38,7 @@ body {
 }
 
 .table-row {
-  border-bottom: 1px solid darkgray;
+  border-bottom: 1px solid lightgray;
 }
 
 .table-cell {
