--- a/src/Reset.scss
+++ b/src/Reset.scss
@@ -137,3 +137,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+input[type='button'] {
+  cursor: pointer;
+}
