--- a/src/Reset.scss
+++ b/src/Reset.scss
@@ -136,8 +136,9 @@ body {
   line-height: 1.7;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow-y: scroll;
 }
 
-input[type='button'] {
+button, input[type='button'] {
   cursor: pointer;
 }
