--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import './config.scss';
+
 // utils
 // ==============================================================
 
@@ -22,11 +24,25 @@
   padding: 0 15px;
 }
 
+.button {
+  padding: 5px 15px;
+  background-color: #fff;
+  border: 1px solid $color-primary;
+  border-radius: 3px;
+  color: $color-primary;
+  transition: all 0.1s;
+  &:hover {
+    background-color: $color-primary;
+    color: #fff;
+  }
+}
+
 .table-row {
   border-bottom: 1px solid darkgray;
   transition: all 0.04s;
+  cursor: pointer;
   &:hover {
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(234, 238, 245);
   }
 }
 
