--- a/src/App.scss
+++ b/src/App.scss
@@ -13,8 +13,6 @@ body {
 // components
 // ==============================================================
 
-.container {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0 15px;
+.main {
+  padding-top: 28px;
 }
